replacing List.of() usage to support java 8