@@ -7,6 +7,7 @@ package com.chess;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -51,9 +52,8 @@ public class ChessServiceTest {
         ChessBoard chessBoard = chessService.startNewChessGame();
         Assertions.assertNotNull(chessBoard);
         String cellId = "D5";
-        List<String> expectedPossibleMoves = List.of(
-                "D4", "D6", "C5", "E5", "C4", "E6", "C6", "E4"
-        );
+        List<String> expectedPossibleMoves = Arrays.asList(new String[]{
+                "D4", "D6", "C5", "E5", "C4", "E6", "C6", "E4"});
         chessBoard.placePieceAtCell(PieceType.KING, cellId);
         List<Cell> possibleMoves = chessService.getAllPossibleMovesForCell(chessBoard, cellId);
         Assertions.assertNotNull(possibleMoves);
@@ -70,8 +70,8 @@ public class ChessServiceTest {
         ChessBoard chessBoard = chessService.startNewChessGame();
         Assertions.assertNotNull(chessBoard);
         String cellId = "H8";
-        List<String> expectedPossibleMoves = List.of(
-                "G8", "G7", "H7"
+        List<String> expectedPossibleMoves = Arrays.asList(new String[]{
+                "G8", "G7", "H7"}
         );
         chessBoard.placePieceAtCell(PieceType.KING, cellId);
         List<Cell> possibleMoves = chessService.getAllPossibleMovesForCell(chessBoard, cellId);
@@ -89,12 +89,12 @@ public class ChessServiceTest {
         ChessBoard chessBoard = chessService.startNewChessGame();
         Assertions.assertNotNull(chessBoard);
         String cellId = "E4";
-        List<String> expectedPossibleMoves = List.of(
+        List<String> expectedPossibleMoves = Arrays.asList(new String[]{
                 "A8", "B7", "C6", "D5", "F3", "G2", "H1",
                 "B1", "C2", "D3", "F5", "G6", "H7",
                 "A4", "B4", "C4", "D4", "F4", "G4", "H4",
-                "E1", "E2", "E3", "E5", "E6", "E7", "E8"
-                );
+                "E1", "E2", "E3", "E5", "E6", "E7", "E8"}
+        );
         chessBoard.placePieceAtCell(PieceType.QUEEN, cellId);
         List<Cell> possibleMoves = chessService.getAllPossibleMovesForCell(chessBoard, cellId);
         Assertions.assertNotNull(possibleMoves);
@@ -111,10 +111,10 @@ public class ChessServiceTest {
         ChessBoard chessBoard = chessService.startNewChessGame();
         Assertions.assertNotNull(chessBoard);
         String cellId = "H8";
-        List<String> expectedPossibleMoves = List.of(
+        List<String> expectedPossibleMoves = Arrays.asList(new String[]{
                 "A8", "B8", "C8", "D8", "E8", "F8", "G8",
                 "G7", "F6", "E5", "D4", "C3", "B2", "A1",
-                "H7", "H6", "H5", "H4", "H3", "H2", "H1"
+                "H7", "H6", "H5", "H4", "H3", "H2", "H1"}
         );
         chessBoard.placePieceAtCell(PieceType.QUEEN, cellId);
         List<Cell> possibleMoves = chessService.getAllPossibleMovesForCell(chessBoard, cellId);
